infra/redis/redis-ec2.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "EC2 instance with Redis installed"

Resources:

  RedisSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow Redis and SSH"
      VpcId: "vpc-08286ab7e906555ab" # EKS> Cluster> Networking> VPC (also look at subnets)
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          CidrIp: 0.0.0.0/0  # Redis exposed to entire internet for demo. Fine for now.
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  RedisInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0c2ab3b8efb09f272   # Amazon Linux 2 for us-west-2
      KeyName: schrodinger-key-pair

      NetworkInterfaces: # InstancePublicIP
        - DeviceIndex: "0"
          SubnetId: "subnet-0783309c482b4db0b" # VPC> Route tables> match subnet from VPC's to public route table
          GroupSet:
            - !Ref RedisSecurityGroup    # In case EIP fails, auto-assign...
          AssociatePublicIpAddress: true # ...public IPv4 addr on EC2 instance launch

      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum update -y
          amazon-linux-extras install redis6 -y

          # Allow external connections
          sed -i 's/^bind .*/bind 0.0.0.0/' /etc/redis/redis.conf
          sed -i 's/^protected-mode yes/protected-mode no/' /etc/redis/redis.conf

          systemctl enable redis6
          systemctl start redis6
          sleep 2

          # Debug log
          systemctl status redis6 > /home/ec2-user/redis_status.txt
          ss -tulnp | grep 6379 >> /home/ec2-user/redis_status.txt

      Tags:
        - Key: Name
          Value: Redis-Server

  # Use Elastic IP so Redis Server public IP doesn't change if instance restarts
  RedisEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  RedisEIPAssociation: # Associate EIP with instance
    Type: AWS::EC2::EIPAssociation
    DependsOn: RedisInstance # Prevent CloudFormation from associating EIP before instance is ready
    Properties:
      InstanceId: !Ref RedisInstance
      AllocationId: !GetAtt RedisEIP.AllocationId

Outputs:
  ElasticIP:
    Description: "Elastic IP of Redis EC2"
    Value: !Ref RedisEIP
